--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.12.2",
+    "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
+    "react-map-gl": "^7.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sass": "^1.64.0",
